--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,35 @@
 version: '3.8'
+
 services:
   geth-sepolia:
     image: ethereum/client-go:stable
+    container_name: geth-sepolia
     command:
       [
-        "--sepolia",
-        "--http",
+        "--sepolia",                 
+        "--http",                    
         "--http.addr=0.0.0.0",
         "--http.port=8545",
-        "--http.api=eth,net,web3",
-        "--metrics",
+        "--http.api=eth,net,web3",   
+        "--metrics",                 
         "--metrics.addr=0.0.0.0",
         "--metrics.port=6060",
-        "--verbosity=3"
+        "--verbosity=3"              
       ]
     ports:
-      - "8545:8545"
-      - "6060:6060"
+      - "8545:8545" 
+      - "6060:6060"  
     restart: on-failure
+
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro  
+      - prometheus_data:/prometheus                       
+    ports:
+      - "9090:9090"  
+    restart: unless-stopped
+
+volumes:
+  prometheus_data: {}
